force-app/main/default/objects/Matching_Rules__c/Matching_Rules__c.object-meta.xml
<CustomObject>
    <description>It has follow me/member matching criteria linked to an assignment group.</description>
    <label>QA Matching Rules</label>
    <nameField>
        <label>Matching Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Matching Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>