force-app/main/default/objects/Matching_Rules__c/fields/Enable_Caching__c.field-meta.xml
<CustomField>
    <fullName>Enable_Caching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, turns on caching of the results of Matching Rules SOQL queries</description>
    <label>Enable Caching (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>