force-app/main/default/objects/Matching_Rules__c/fields/Follow_Me_Active_Records_Only__c.field-meta.xml
<CustomField>
    <fullName>Follow_Me_Active_Records_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Records Only</label>
    <type>Checkbox</type>
</CustomField>