force-app/main/default/objects/Matching_Rules__c/fields/Follow_Me_This_Distribution_Group_only__c.field-meta.xml
<CustomField>
    <fullName>Follow_Me_This_Distribution_Group_only__c</fullName>
    <defaultValue>true</defaultValue>
    <label>This Distribution Group only</label>
    <type>Checkbox</type>
</CustomField>