force-app/main/default/objects/Matching_Rules__c/fields/Follow_Me_Time_Unit__c.field-meta.xml
<CustomField>
    <fullName>Follow_Me_Time_Unit__c</fullName>
    <label>Time Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>