force-app/main/default/objects/Matching_Rules__c/fields/Follow_Me_Units_Of_Time__c.field-meta.xml
<CustomField>
    <fullName>Follow_Me_Units_Of_Time__c</fullName>
    <label>Units Of Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>