force-app/main/default/objects/Matching_Rules__c/fields/Follow_Me_Update_Field__c.field-meta.xml
<CustomField>
    <fullName>Follow_Me_Update_Field__c</fullName>
    <label>Update Field</label>
    <length>128</length>
    <type>Text</type>
</CustomField>