force-app/main/default/objects/Matching_Rules__c/fields/Ignore_Cap__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Cap__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ignore Cap</label>
    <type>Checkbox</type>
</CustomField>