force-app/main/default/objects/Matching_Rules__c/fields/Ignore_Quota__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Quota__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ignore Quota</label>
    <type>Checkbox</type>
</CustomField>