force-app/main/default/objects/Matching_Rules__c/fields/Member_Lookup_Match_Field__c.field-meta.xml
<CustomField>
    <fullName>Member_Lookup_Match_Field__c</fullName>
    <label>Member_Lookup_Match_Field (NoLongerUsed)</label>
    <length>128</length>
    <type>Text</type>
</CustomField>