force-app/main/default/objects/Matching_Rules__c/fields/Member_Lookup_Object__c.field-meta.xml
<CustomField>
    <fullName>Member_Lookup_Object__c</fullName>
    <label>Member Lookup Object (No Longer Used)</label>
    <length>128</length>
    <type>Text</type>
</CustomField>