force-app/main/default/objects/Matching_Rules__c/fields/Member_Lookup_RHS_Lookup_Object__c.field-meta.xml
<CustomField>
    <fullName>Member_Lookup_RHS_Lookup_Object__c</fullName>
    <description>This field stores the object name to be used on right hand side of the equation. It defaults to User but can be any object that has a lookup to User.</description>
    <inlineHelpText>Select object from which you want to select a field to be used in this matching rule&apos;s equation. It defaults to User but can be any object that has a lookup to User.</inlineHelpText>
    <label>Member Lookup RHS Lookup Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>