force-app/main/default/objects/Matching_Rules__c/fields/Member_Lookup_RHS_Lookup_User_Link_Field__c.field-meta.xml
<CustomField>
    <fullName>Member_Lookup_RHS_Lookup_User_Link_Field__c</fullName>
    <description>This is the field on the Member Lookup RHS Lookup Object to use to link back to User, or the field on User that looks up to the object, depending on which way round the link works.</description>
    <inlineHelpText>Select field from selection lookup object to be used in this matching rule&apos;s equation.</inlineHelpText>
    <label>Member Lookup RHS Lookup User Link Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>