force-app/main/default/objects/Matching_Rules__c/fields/RHS1_Treat_blank_values_as__c.field-meta.xml
<CustomField>
    <fullName>RHS1_Treat_blank_values_as__c</fullName>
    <label>Treat blank values as</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TreatValuesAsOptions</valueSetName>
    </valueSet>
</CustomField>