force-app/main/default/objects/Matching_Rules__c/fields/RHS1_Treat_Blank_Values_As_x_Fixed_Value__c.field-meta.xml
<CustomField>
    <fullName>RHS1_Treat_Blank_Values_As_x_Fixed_Value__c</fullName>
    <label>Fixed Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>