force-app/main/default/objects/Matching_Rules__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow Me</fullName>
            </value>
            <value>
                <fullName>Member Lookup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>